# arcane

./: .commitlintrc.js  .commitlintrc.yaml  .devcontainer.json  .editorconfig  .envrc  .folderinfo  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .lefthook.yaml  .mise.toml  .mlc_config.json  .mocharc.json  .prettierignore  .prettierrc.json  .renovaterc  .renovaterc.json  .sops.yaml  .tool-versions  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISASTER_RECOVERY_PLAN.md  LICENSE  OK.json  PAS_OK.json  README.md  Taskfile.dist.yaml  devenv.nix  flake.nix  k3d.yaml  kind.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  (+6 more)
.agents/knowledge/: README.md  cilium.md  talos.md  (+5 more)
.devcontainer/: .dockerignore  .folderinfo  Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yaml  first-run-notice.txt  lazygit.config.yaml
.github/: .commitlintrc.pr.js  labeler.yml  labels.yaml  pull_request_template.md
.trunk/: gha.yaml  trunk.yaml
apps/: apps.core.yml  apps.dashboards.yml  apps.hardware.yml  apps.miscellaneous.yml  apps.security.yml  docker-compose.yml
catalog/: .folderinfo  .mise.toml  package.json
docs/: RENOVATE.md
nex.rpi/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json
scripts/: .folderinfo  Taskfile.docker.yaml  Taskfile.gh.yaml  app:icon:generator  argocd:app:sync  bao:kv:copy  cnpg:backup:create.sh  cnpg:db:migrate  dcgoss  dgoss  dist:render  folderinfo  nix:_lib  nix:build:image  nix:build:lxc  nix:hash:update  nonix  pulumi  puuluumi  talos:ctx  talosctl  transcrypt
(+3286 files in other folders)
